Thu Sep 18 20:44:03 1997  Tom Yu  <tlyu@mit.edu>

	* utils.c: Replace HAS_STRDUP with something more sane.

	* configure.in: Replace HAS_STRDUP with something more sane.

Sun Aug 17 14:39:56 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (SRCS): Add $(srcdir) as needed.

Wed Feb  5 22:52:41 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Remove the target ct_c.awk before copying over it.
		If ct_c.awk.in were read-only, ct_c.awk will become
		read-only and cannot be updated again.

Thu Jun 13 21:43:44 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* configure.in: remove ref to SS_RULES, ET_RULES	

Tue Mar 12 22:32:56 1996  Ken Raeburn  <raeburn@cygnus.com>

	* configure.in: Use AC_HEADER_STDARG instead of calling
	AC_CHECK_HEADER on stdarg.h.

Mon Sep 25 16:42:57 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Thu Aug 24 18:19:54 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Updated to reflect ct_c.* to ct_c.*.in filename changes.

Mon Aug  7 19:14:28 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (mk_cmds): Add $(SHELL) to invocation of
		config_script, so that the tree can build even after
		checked into a broken SCCS system.

Fri Jul 7 16:42:42 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Add symlink to $(TOPLIBD) for libss.

Wed Jun 28 16:35:43 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in, ct_c_sed.in, ct_c_awk.in: Rename ct_c.*.in to
		ct_c_*.in, so that the sources will unpack cleanly under
		DOS.  Argh.

Wed Jun 28 11:24:20 1995    <tytso@rsx-11.mit.edu>

	* Makefile.in, ct_c.sed.in, ct_c.awk.in, config_script: Rename
		ct_c.* to ct_c.*.in.  ct_c.sed.in is now processed by sed
		to remove comment lines beginning with '#', since some sed
		programs can't handle that.  Change config_script so that
		the directory where the ct_c.* files can be specified,
		since those are in the build directory, instead of the