@@ -3,9 +3,6 @@ CONFIG_RULES
 AC_PROG_LEX
 AC_PROG_YACC
 AC_PROG_AWK
-AC_PROG_ARCHIVE
-AC_PROG_ARCHIVE_ADD
-AC_PROG_RANLIB
 HAVE_YYLINENO
 AC_CHECK_FUNCS(strdup)
 CHECK_DIRENT
@@ -18,6 +15,6 @@ AC_CHECK_HEADERS(stdlib.h)
 CopySrcHeader(ss.h,$(BUILDTOP)/include/ss)
 CopySrcHeader(mit-sipb-copyright.h,$(BUILDTOP)/include/ss)
 CopyHeader(ss_err.h,$(BUILDTOP)/include/ss)
-LinkFileDir([$](TOPLIBD)/libss.a,libss.a,../util/ss)
-AppendRule([all:: [$](TOPLIBD)/libss.a])
+KRB5_BUILD_LIBRARY_STATIC
+KRB5_BUILD_LIBOBJS
 V5_AC_OUTPUT_MAKEFILE
