@@ -1,3 +1,9 @@
+Tue Nov 18 19:22:34 1997  Tom Yu  <tlyu@mit.edu>
+
+	* configure.in: Update to new library build system.
+
+	* Makefile.in: Update to new library build system.
+
 Thu Sep 18 20:44:03 1997  Tom Yu  <tlyu@mit.edu>
 
 	* utils.c: Replace HAS_STRDUP with something more sane.
